<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/winnerTitle"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/winner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/winnerName"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="200dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/returnStartActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/returnMainActivityText"
                android:textStyle="bold"
                android:textSize="18sp"
                android:backgroundTint="#448AFF">

            </Button>

        </LinearLayout>
    </FrameLayout>

</androidx.cardview.widget.CardView>