<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8BEFF"
    android:orientation="horizontal"
    tools:context=".activities.StartActivity">

    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:src="@drawable/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/player2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0067DE"
        android:text="@string/player2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

    </Button>

    <Button
        android:id="@+id/player1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0067DE"
        android:text="@string/player1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </Button>

    <Button
        android:id="@+id/resetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0067DE"
        android:text="@string/resetInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        tools:ignore="MissingConstraints">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>